Fri Jan 12 11:18:34 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Update acinclude.m4

Thu Jan 11 13:59:18 GMT 2001 Olly Betts

	* $date now takes an optional format argument.

	* $select removed; $relevant and $record now take an optional document
	  id argument.

Thu Jan 11 12:48:23 GMT 2001 Olly Betts

	* filter_map is now a multimap to allow multiple values for the same
	  boolean filter.

Wed Jan 10 16:49:10 GMT 2001 Olly Betts

	* MAXHITS/maxhits/list_size renamed to
	  HITSPERPAGE/hitsperpage/hits_per_page.

	* catch by const reference.

	* MATCHOP renamed to DEFAULTOP.

	* Reference to THRESHOLD removed.

Sun Dec 17 16:17:17 GMT 2000 Olly Betts

	* Updated to use OmTermIterator.

Fri Dec 15 12:56:40 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Remove begin_session() and end_session() from omindex.cc

Wed Dec 13 15:36:28 GMT 2000 Olly Betts

	* Updated to use OmMSet::operator[]().

Tue Dec 12 19:40:53 GMT 2000 Olly Betts

	* Partially updated to the new OmMSet interface (partially because
	  it's time I went home!)

Mon Dec 11 13:37:17 GMT 2000 Olly Betts

	* Updated to reflect OmRSet encapsulation.

Sun Dec 10 17:28:21 GMT 2000 Olly Betts

	* OmDocumentContents -> OmDocument.

Sun Dec 10 17:04:14 GMT 2000 Olly Betts

	* OmESetItem -> OmESetIterator.

Tue Dec  5 16:26:24 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fixes to compile with stlport.

	* Fixes to use the new matches_{{lower,upper}_bound,estimated}
	  interface.

Tue Nov 28 15:07:19 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Updated indexer/indexfile.xml to use the omsplitonchars node
	  instead of the omregexsplit node.

Fri Nov 24 16:05:03 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Declare this to be version 0.4.1

Fri Nov 24 13:35:05 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add --remote parameter to msearch.
